text too light fix

--- a/src/qt/pivx/res/css/style_light.css
+++ b/src/qt/pivx/res/css/style_light.css
@@ -821,7 +821,7 @@ HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH*/
 }
 
 *[cssClass="text-list-caption-medium"] {
-  color: #b9b9b9;
+  color: #575757;
   font-size: 14px;
 }
 
@@ -904,7 +904,7 @@ HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH*/
 }
 
 *[cssClass="text-subtitle"] {
-  color: #b9b9b9;
+  color: #7A7A7A;
   font-size: 14px;
 }
 
